ported to Java 1.4. added some perf tests