@@ -10,18 +10,17 @@ import junit.framework.TestCase;
 
 public class SimpleRecordMarshallTest extends TestCase {
 
-  private Marshaller<SimpleRecord> marshaller;
+  private Marshaller marshaller;
   private SimpleRecord record;
   private StringWriter stringWriter;
 
-  @Override
   protected void setUp() throws Exception {
     super.setUp();
 
     record = new SimpleRecord();
     record.setName("FEDERICO");
     record.setSurname("FISSORE");
-    record.setTaxCode("FSSFRC79E18L219V");
+    record.setTaxCode("ABCDEF88L99H123B");
 
     Calendar calendar = Calendar.getInstance();
     calendar.set(Calendar.YEAR, 1979);
@@ -29,26 +28,34 @@ public class SimpleRecordMarshallTest extends TestCase {
     calendar.set(Calendar.DAY_OF_MONTH, 18);
     record.setBirthday(calendar.getTime());
 
-    record.setOneInteger(Integer.valueOf(81));
-    record.setOneFloat(Float.valueOf(1.97f));
+    record.setOneInteger(new Integer(81));
+    record.setOneFloat(new Float(1.97f));
 
-    marshaller = new Marshaller<SimpleRecord>(new InputStreamReader(SimpleRecordMarshallTest.class
+    marshaller = new Marshaller(new InputStreamReader(SimpleRecordMarshallTest.class
         .getResourceAsStream("/simple.def.properties")));
 
     stringWriter = new StringWriter();
   }
 
-  public void testMarshallOne() throws Exception {
-    marshaller.marshall(record, stringWriter);
+  public void testMarshallALot() throws Exception {
+    for (int i = 0; i < 100000; i++) {
+      marshaller.marshall(record, stringWriter);
+    }
 
-    assertEquals("FEDERICO            FISSORE             FSSFRC79E18L219V1979051881197\n", stringWriter.toString());
+    assertEquals(7000000, stringWriter.toString().length());
   }
 
   public void testMarshallMore() throws Exception {
     marshaller.marshall(record, stringWriter);
     marshaller.marshall(record, stringWriter);
 
-    assertEquals("FEDERICO            FISSORE             FSSFRC79E18L219V1979051881197\n"
-        + "FEDERICO            FISSORE             FSSFRC79E18L219V1979051881197\n", stringWriter.toString());
+    assertEquals("FEDERICO            FISSORE             ABCDEF88L99H123B1979051881197\n"
+        + "FEDERICO            FISSORE             ABCDEF88L99H123B1979051881197\n", stringWriter.toString());
+  }
+
+  public void testMarshallOne() throws Exception {
+    marshaller.marshall(record, stringWriter);
+
+    assertEquals("FEDERICO            FISSORE             ABCDEF88L99H123B1979051881197\n", stringWriter.toString());
   }
 }
